<resources>

    <string name="app_name">Lights Off</string>
    <string name="title_activity_lights_off">Light Off</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_new_grid">New Grid</string>
    <string name="menu_about">About</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_difficulty">Difficulty</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_difficulty_title">Select Difficulty</string>
    <string name="text_ok">Ok</string>
    <string name="text_cancel">Cancel</string>
    <string name="Easy">Easy</string>
    <string name="Hard">Hard</string>
    <string name="Medium">Medium</string>
</resources>