<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:background="#8F1A3B"
   android:orientation="vertical" >

   <RadioGroup android:id="@+id/radiogroup"
       		   android:layout_width="wrap_content"
       		   android:layout_height="wrap_content" >
  		<RadioButton android:id="@+id/difficulty_easy"
  		    		 android:layout_width="wrap_content"
  		    		 android:layout_height="wrap_content"
  		    		 android:text="@string/Easy" />
  		<RadioButton android:id="@+id/difficulty_easy"
  		    		 android:layout_width="wrap_content"
  		    		 android:layout_height="wrap_content"
  		    		 android:text="@string/Medium" />
  		<RadioButton android:id="@+id/difficulty_easy"
  		    		 android:layout_width="wrap_content"
  		    		 android:layout_height="wrap_content"
  		    		 android:text="@string/Hard" />
  		
  		    		 
   </RadioGroup>
  	
   <LinearLayout android:id="@+id/buttons"
	    		  android:layout_height="wrap_content"
	    		  android:layout_width="wrap_content" 
	    		  android:orientation="horizontal" >
		<Button android:id="@+id/ok"
   				android:layout_width="fill_parent"
   				android:layout_height="wrap_content"
   				android:gravity="center"
  				 android:text="@string/text_ok" />
		<Button android:id="@+id/cancel"
   				android:layout_width="fill_parent"
   				android:layout_height="wrap_content"
   				android:gravity="center"
  				 android:text="@string/text_cancel" />
	    	    
	</LinearLayout>

</LinearLayout>
